# userstudy.github.io

./: CMakeLists.txt  Readme.md  config.txt  web.cpp
PreferenceLearning/: preferenceLearning.cpp  preferenceLearning.h
Result/: wang.txt
UH/: Median_Hull.cpp  UH.cpp  UH.h
docs/: asset-manifest.json  index.html  service-worker.js
docs/static/js/: 1.431f1c68.chunk.js
qhull/: geom2.cpp  io.cpp  user.cpp
react-app/: package.json
react-app/public/: index.html
react-app/src/actions/: index.js
react-app/src/components/: App.js  Question.js  Result.js  Welcome.js
react-app/src/reducers/: index.js
structure/: Partition.cpp  Partition.h  define.h  point_set.cpp  point_set.h  point_t.cpp  point_t.h
